--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<!-- TODO App Project
-	 * Build an App that allows users to make a simple TODO List
-	 * Seems easy, but it will require all your skills that you've used up to this point!
-	 * Refer to the Example in the DSD if you need
-	 * Minimum:
-	 	* Use jQuery/JavaScript to allow users to make a list
-	 	* Create a button that cleans the todo list
-	 * Challenge:
-	 	* Use jQuery/JavaScript to allow users to edit/delete individual posts
-	 * Hints:
-	 	* You're going to have to use JavaScript Variables and Arrays to do this project (well)
-	 	* Look up JavaScript functions to keep your code DRY (Don't Repeat Yourself)
-	 		* If you find yourself writing the same code twice, make it a function!
--->
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Title -->
+	<title>TODO App</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="stylesheet"  type="text/css" href="main.css">
 
-	<!-- Remember to Import jQuery from google (https://developers.google.com/speed/libraries/)-->
-
-	<!-- Include your JS and CSS Files below! If you don't remember how to, check out your reference table!-->
-	<!-- Or W3 Schools: http://www.w3schools.com/tags/att_script_src.asp & http://www.w3schools.com/css/css_howto.asp -->
+	<script src="scripts.js"></script>
 </head>
-<body>
+	<div class="container">
+		<h1>Ethan's To Do List</h1>
+		<div class="form">
+			<input id="todoinp" type="text" placeholder="New Todo" />
+			<button id="newTodo">+</button>
+		</div>
+		<div class="opts">
+			<button id="deleteAll">Delete All</button>
+		</div>
 
+
+		<div class="content"></div>
+		</div>
+	</div>
 </body>
 </html>
